--- a/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
@@ -40,29 +40,29 @@
                         </c:if>
                         <br/>
                         <h:panelGrid columns="4" cellpadding="5">
-                            <p:outputLabel style="font-weight: bold"  value="Salutation: "/>
-                            <h:inputText required="true" requiredMessage="Field is required" value="#{createUserManagerBean.salution}" styleClass="form-control" />
+                            <p:outputLabel style="font-weight: bold"  value="Salutation * : "/>
+                            <h:inputText required="true" requiredMessage="Salutation is required" value="#{createUserManagerBean.salution}" styleClass="form-control" />
 
-                            <p:outputLabel style="font-weight: bold" value="First Name: "/>
-                            <h:inputText required="true" requiredMessage="Field is required" value="#{createUserManagerBean.firstName}" styleClass="form-control" />
+                            <p:outputLabel style="font-weight: bold" value="First Name * : "/>
+                            <h:inputText required="true" requiredMessage="First Name is required" value="#{createUserManagerBean.firstName}" styleClass="form-control" />
 
-                            <p:outputLabel style="font-weight: bold" value="Last Name: "/>
-                            <h:inputText required="true" requiredMessage="Field is required" value="#{createUserManagerBean.lastName}" styleClass="form-control" />
+                            <p:outputLabel style="font-weight: bold" value="Last Name * : "/>
+                            <h:inputText required="true" requiredMessage="Last Name is required" value="#{createUserManagerBean.lastName}" styleClass="form-control" />
 
-                            <p:outputLabel style="font-weight: bold" value="Email Address: "/>
-                            <h:inputText required="true" requiredMessage="Field is required" value="#{createUserManagerBean.emailAddress}" styleClass="form-control" />
+                            <p:outputLabel style="font-weight: bold" value="Email Address * : "/>
+                            <h:inputText required="true" requiredMessage="Email Address is required" value="#{createUserManagerBean.emailAddress}" styleClass="form-control" />
 
-                            <p:outputLabel style="font-weight: bold" value="Password: "/>
-                            <h:inputText required="true" requiredMessage="Field is required" value="#{createUserManagerBean.password}" styleClass="form-control" />
+                            <p:outputLabel style="font-weight: bold" value="Password * : "/>
+                            <h:inputText required="true" requiredMessage="Password is required" value="#{createUserManagerBean.password}" styleClass="form-control" />
 
-                            <p:outputLabel style="font-weight: bold" value="Postal Address: "/>
-                            <h:inputText required="true" requiredMessage="Field is required" value="#{createUserManagerBean.postalAddress}" styleClass="form-control" />
+                            <p:outputLabel style="font-weight: bold" value="Postal Address * : "/>
+                            <h:inputText required="true" requiredMessage="Postal Address is required" value="#{createUserManagerBean.postalAddress}" styleClass="form-control" />
 
-                            <p:outputLabel style="font-weight: bold" value="Contact Number: "/>
-                            <h:inputText required="true" requiredMessage="Field is required" value="#{createUserManagerBean.contactNumber}" styleClass="form-control" />
+                            <p:outputLabel style="font-weight: bold" value="Contact Number * : "/>
+                            <h:inputText required="true" requiredMessage="Contact Number is required" value="#{createUserManagerBean.contactNumber}" styleClass="form-control" />
 
 
-                            <p:outputLabel value="Credit:" style="font-weight: bold"/>
+                            <p:outputLabel value="Credit * :" style="font-weight: bold"/>
                             <h:selectOneMenu required="true" requiredMessage="Please select credit" id="credit" value="#{createUserManagerBean.credit}" styleClass="form-control">
                                 <f:selectItem itemLabel="Not Applicable" itemValue="Not Applicable" />
                                 <f:selectItem itemLabel="Pass" itemValue="Pass" />
@@ -70,9 +70,9 @@
                             </h:selectOneMenu>
 
 
-                            <p:outputLabel value="Select Roles:" style="font-weight: bold" />
+                            <p:outputLabel value="Select Roles * :" style="font-weight: bold" />
                             <p:selectCheckboxMenu id="roles" value="#{createUserManagerBean.selectedRoles}" label="Roles"
-                                                  filter="true" filterMatchMode="startsWith" panelStyle="width:300px" styleClass="form-control">
+                                                  filter="true" filterMatchMode="startsWith" panelStyle="width:300px" styleClass="form-control" required="true" requiredMessage="Please select role">
                                 <f:selectItems value="#{createUserManagerBean.roles}" var="role" itemLabel="#{role.roleName}" itemValue="#{role.userRoleId}"/>
                             </p:selectCheckboxMenu>
                         </h:panelGrid>
