--- a/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
@@ -24,8 +24,10 @@
                 <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
                 <p:menuitem value="Edit A Product" url="editproduct.xhtml" />
                 <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+                <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
             </p:menubar>
             <br/>
+            
             <p:panel id="panel" header="Add New Product">
                 <p:ajaxStatus style="width:16px;height:16px;">
                     <f:facet name="start">
