--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
@@ -25,6 +25,7 @@
                 <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
                 <p:menuitem value="Edit A Product" url="editproduct.xhtml" />
               <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+              <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
             </p:menubar>
             <br/>
         </h:form>
