--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -14,21 +14,35 @@
             <h:form>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-2">
                             <h2>Hi, #{dashboardBean.loginedUser.firstName}</h2>
                             <ul class="list-group">
-                                <li class="list-group-item"><a href="${root}/viewallproducts.xhtml">View Products</a></li>
-                                <li class="list-group-item"><a href="${root}/administration.xhtml">View Subscribers</a></li>
-                                <li class="list-group-item"><a href="#">MRP II</a></li>
-                                <li class="list-group-item"><a href="#">TMS</a></li>
-                                <li class="list-group-item"><a href="#">CRMS</a></li>
-                                <li class="list-group-item"><a href="#">WMS</a></li>
-                                <li class="list-group-item"><a href="#">OES</a></li>
-                                <li class="list-group-item"><a href="#">GRNS</a></li>
+                                <c:if test ="#{dashboardBean.loginedUser.userType == 'superuser'}">
+                                    <li class="list-group-item"><a href="${root}/admin/viewallsubscribers.xhtml">View Subscribers</a></li>
+                                </c:if>
+                                <c:if test ="#{dashboardBean.canUseOES() || dashboardBean.loginedUser.userType == 'superuser'}">
+                                    <li class="list-group-item"><a href="${root}/oes/oesIndexPage.xhtml">OES</a></li>
+                                </c:if>
+                                <c:if test ="#{dashboardBean.canUseMRP() || dashboardBean.loginedUser.userType == 'superuser'}">
+                                    <li class="list-group-item"><a href="${root}/mrp/mrp.xhtml">MRP II</a></li>
+                                </c:if>
+                                <c:if test ="#{dashboardBean.canUseTMS() || dashboardBean.loginedUser.userType == 'superuser'}">
+                                    <li class="list-group-item"><a href="#">TMS</a></li>
+                                </c:if>
+                                <c:if test ="#{dashboardBean.canUseCRMS() || dashboardBean.loginedUser.userType == 'superuser'}">
+                                    <li class="list-group-item"><a href="#">CRMS</a></li>
+                                </c:if>
+                                <c:if test ="#{dashboardBean.canUseWMS() || dashboardBean.loginedUser.userType == 'superuser'}">
+                                    <li class="list-group-item"><a href="#">WMS</a></li>
+                                </c:if>
+                                <c:if test ="#{dashboardBean.canUseGRNS() || dashboardBean.loginedUser.userType == 'superuser'}">
+                                    <li class="list-group-item"><a href="#">GRNS</a></li>
+                                </c:if>
+
                             </ul>
                         </div>
                         <div class="col-md-8">
-                            <c:if test="${dashboardBean.loginedUser.userType eq 'superuser'}">
+                            <c:if test="#{dashboardBean.loginedUser.userType eq 'superuser'}">
                                 <h2>View Logs</h2>
                             </c:if>
                             <h2>Inbox</h2>
