Fixed filter table bug- Manli

--- a/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
@@ -68,7 +68,7 @@
             </p:dataTable>
             <br></br>
             <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-            <p:commandButton action="viewallrequest.xhtml" value="Go Back">
+            <p:commandButton action="viewallrequests.xhtml" value="Go Back">
             </p:commandButton>   
             <p:commandButton action="#{quotationManagedBean.deletRequest}" value="Cancel This Request">
             </p:commandButton>        
