--- a/MerlionPortal/MerlionPortal-war/web/oes/displayallproducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayallproducts.xhtml
@@ -56,12 +56,12 @@
                     <h:outputText value="#{product.description}" />
                 </p:column>
 
-                <p:column filterBy="#{product.category}" filterMatchMode="contains" headerText="Category">
+                <p:column filterBy="#{product.category}" filterMatchMode="in" headerText="Category">
                     <f:facet name="filter">
                         <p:selectCheckboxMenu label="Select" 
-                                              onchange="PF('produtsTalbe').filter()" 
+                                              onchange="PF('productsTable').filter()" 
                                               panelStyle="width:150px" scrollHeight="150">
-                            <f:selectItems value="#{displayProductManagedBean.categories}" />
+                            <f:selectItems value="#{displayProductManagedBean.categories}"/>
                         </p:selectCheckboxMenu>
                     </f:facet>
                     <h:outputText value="#{product.category}" />
